--- a/style.css
+++ b/style.css
@@ -7,3 +7,18 @@ section img{
     width: auto;
 
 }
+
+header{
+ font-family: 'Courier New', Courier, monospace;
+ padding-top: 3%;
+ padding-bottom: 3%;
+ text-align: center;
+ border-style: dotted;
+ border-color: ghostwhite;
+ font-size: larger;
+}
+
+#products{
+
+}
+
